objects/Case_Deflection__c.object
<CustomObject>
    <description>used to capture when a customer visits the Portal and starts to create a Case.</description>
    <fields>
        <fullName>Article_ID__c</fullName>
        <description>The Last Article ID that the Customer clicked on</description>
        <inlineHelpText>The Last Article ID that the Customer clicked on</inlineHelpText>
        <label>Article ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <description>The Last Article Title that the Customer clicked on</description>
        <inlineHelpText>The Last Article Title that the Customer clicked on</inlineHelpText>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Deflected__c</fullName>
        <description>Indicates if the Customer did or did not create a Case after they entered a Subject on the Case submission Portal form</description>
        <formula>If( ISBLANK(Case__c ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates if the Customer did or did not create a Case after they entered a Subject on the Case submission Portal form</inlineHelpText>
        <label>Case Deflected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays theCase that was created associated to the Case Deflection.  Will only be populated if the Customer decides to create a Case after they enter a Subject on the Case submission form</description>
        <inlineHelpText>Displays theCase that was created associated to the Case Deflection.  Will only be populated if the Customer decides to create a Case after they enter a Subject on the Case submission form</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Deflections</relationshipLabel>
        <relationshipName>Case_Deflections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Add any comments for the Case Deflection</description>
        <inlineHelpText>Add any comments for the Case Deflection</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>displays the last Subject that the Customer entered on the Case submission form in the Portal</description>
        <inlineHelpText>displays the last Subject that the Customer entered on the Case submission form in the Portal</inlineHelpText>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field allows to differentiate between Customer Service/Tech Support, as suggested articles appear under the general CS request now (and may be added to more places in the future)</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Case Deflection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Subject__c</columns>
        <columns>Article_ID__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Case__c</columns>
        <columns>Case_Deflected__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Case_Deflection</fullName>
        <filterScope>Everything</filterScope>
        <label>Unassigned</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unassigned_Case_Deflection1</fullName>
        <filterScope>Queue</filterScope>
        <label>Unassigned</label>
        <queue>Unassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Case Deflection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Deflections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>